--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -9,31 +9,23 @@ console.log('GTM Tag - COMPLEX-187 (TEST)')
 var pathname = window.location.pathname;
 var eventId = pathname.split('/')[3]
 
-
-async function makeRequest(options) {
-  let result = null;
-  try {
-    result = await $.ajax(options);
-    return result;
-  } catch (error) {
-    console.error(error);
-  }
+async function getContainerId(eventId){
+  const result = await makeRequest({
+    url: `https://api.doo.net/v1/events/${eventId}`,
+    type: 'get',
+    headers: {
+      'Content-Type': 'application/json',
+    },
+    dataType: 'json',
+  })
+  return containerId = result.event_attributes.attributes.filter(function (v) {
+    if (v.name.includes('GTM-container')) {
+      return v.data
+    }
+  });
 }
 
-const result = await makeRequest({
-  url: `https://api.doo.net/v1/events/${eventId}`,
-  type: 'get',
-  headers: {
-    'Content-Type': 'application/json',
-  },
-  dataType: 'json',
-})
 
-const containerId = result.event_attributes.attributes.filter(function (v) {
-  if (v.name.includes('GTM-container')) {
-    return v.data
-  }
-});
-
+const containerId = getContainerId(eventId)
 
 console.log(containerId, 'containerId')
