--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -26,6 +26,7 @@ async function getContainerId(eventId){
     },
     dataType: 'json',
   })
+  console.log(result)
   return result.event_attributes.attributes.filter(function (v) {
     if (v.name.includes('GTM-container')) {
       return v.data
