--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -28,7 +28,7 @@ async function getContainerId(eventId){
   })
   const id = result.event_attributes.attributes.filter(function (v) {
     if (v.name.includes('GTM-container')) {
-      console.log(v[0])
+      console.log(v.data)
       return v.data
     }
   });
