--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -24,11 +24,9 @@ async function getContainerId(eventId){
   })
   const id = result.event_attributes.attributes.filter(function (v) {
     if (v.name.includes('GTM-container')) {
-      console.log(v.data)
       return v.data
     }
   });
-  console.log(id)
   return id
 }
 
@@ -36,6 +34,7 @@ async function insertContainer(){
   const s = document.createElement("script");
   const sc = document.createElement("script");
   const containerId = await getContainerId(eventId)
+  console.log(containerId)
   // Add script content
   s.innerHTML = `(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','${containerId}');`;
   sc.setAttribute("async", "");
