--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -2,10 +2,10 @@ console.log('Start working, Google Tag Manager COMPLEX-187 (TEST)');
 async function makeRequest(options) {
   let result = null;
   try {
-      result = await $.ajax(options);
-      return result;
+    result = await $.ajax(options);
+    return result;
   } catch (error) {
-      console.error(error);
+    console.error(error);
   }
 }
 
@@ -13,7 +13,7 @@ async function makeRequest(options) {
 var pathname = window.location.pathname;
 var eventId = pathname.split('/')[3]
 
-async function getContainerId(eventId){
+async function getContainerId(eventId) {
   const result = await makeRequest({
     url: `https://api.doo.net/v1/events/${eventId}`,
     type: 'get',
@@ -22,7 +22,8 @@ async function getContainerId(eventId){
     },
     dataType: 'json',
   })
-  const id = result.event_attributes.attributes.filter(function (v) {
+
+  id = $.grep(result.event_attributes.attributes, function (v) {
     if (v.name.includes('GTM-container')) {
       return v.data
     }
@@ -30,7 +31,7 @@ async function getContainerId(eventId){
   return id
 }
 
-async function insertContainer(){
+async function insertContainer() {
   const s = document.createElement("script");
   const sc = document.createElement("script");
   const containerId = await getContainerId(eventId)
