--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -23,12 +23,10 @@ async function getContainerId(eventId) {
     dataType: 'json',
   })
 
-  id = $.grep(result.event_attributes.attributes, function (v) {
-    if (v.name.includes('GTM-container')) {
-      return v.data
-    }
+  const attribute = $.grep(result.event_attributes.attributes, function (v) {
+    return v.name.includes('GTM-container')
   });
-  return id
+  return  attribute.data;
 }
 
 async function insertContainer() {
