--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -26,6 +26,7 @@ async function getContainerId(eventId) {
   const attribute = $.grep(result.event_attributes.attributes, function (v) {
     return v.name.includes('GTM-container')
   });
+  console.log(attribute.data)
   return  attribute.data;
 }
 
