--- a/customizations/organization/13060/oleg-test-customization.html
+++ b/customizations/organization/13060/oleg-test-customization.html
@@ -26,8 +26,8 @@ async function getContainerId(eventId) {
   const attribute = $.grep(result.event_attributes.attributes, function (v) {
     return v.name.includes('GTM-container')
   });
-  console.log(attribute)
-  return  attribute.data;
+  console.log(attribute[0])
+  return  attribute[0].data;
 }
 
 async function insertContainer() {
