--- a/customizations/organization/14334/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/14334/bannergenerator/bannergeneratorEN.html
@@ -1,106 +1,106 @@
 <style>
   .signup__form {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-  }
-  fieldset {
-    padding: 0;
-    border: none;
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-  .clear__download {
-    padding-top: 40px;
-    padding-bottom: 30px;
-    justify-content: center;
-  }
-  .form-group {
-    min-width: 150px;
-    height: 50px;
-    position: relative;
-    margin-top: 10px;
-    overflow: hidden;
-  }
-  .form__input {
-    width: 100%;
-    margin-top: 10px !important;
-    border: none;
-    outline: none;
-  }
-  input,select {
-    background-color: white !important;
-  }
-  .form__label {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100% !important;
-    height: 100% !important;
-    pointer-events: none;
-    border-bottom: 1px solid black;
-  }
-  .form__label:after {
-    content: "";
-    position: absolute;
-    left: 0px;
-    bottom: -1px;
-    height: 100%;
-    width: 100%;
-    border-bottom: 3px solid #638832;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease;
-  }
-  .label__content {
-    position: absolute;
-    bottom: 10px;
-    left: 0px;
-    transition: all 0.3s ease;
-  }
-  .form__input:focus+.form__label .label__content,
-  .form__input:valid+.form__label .label__content {
-    transform: translateY(-100%);
-    font-size: 16px;
-    color: #989898 !important;
-  }
-  .form__input:focus+.form__label:after,
-  .form__input:valid+.form__label:after {
-    transform: translateX(0%);
-  }
-  .btn {
-    background-color: white;
-    border: 2px solid #a84720;
-    color: #a84720;
-    padding: 8px !important;
-    border-radius: 5px;
-    font-size: 18px !important;
-  }
-  .btn:hover {
-    background-color: #638832;
-    color: white;
-    border-color: #638832;
-  }
-  .btn_secondary {
-    background-color: white;
-    border: none;
-    color: #a84720;
-    padding: 8px !important;
-    border-radius: 5px;
-    font-size: 18px !important;
-  }
-  .btn_secondary:hover {
-    background-color: #638832;
-    color: white;
-    border-color: #638832;
-  }
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+    }
+    fieldset {
+      padding: 0;
+      border: none;
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+    .clear__download {
+      padding-top: 40px;
+      padding-bottom: 30px;
+      justify-content: center;
+    }
+    .form-group {
+      min-width: 150px;
+      height: 50px;
+      position: relative;
+      margin-top: 10px;
+      overflow: hidden;
+    }
+    .form__input {
+      width: 100%;
+      margin-top: 10px !important;
+      border: none;
+      outline: none;
+    }
+    input,select {
+      background-color: white !important;
+    }
+    .form__label {
+      position: absolute;
+      bottom: 0px;
+      left: 0px;
+      width: 100% !important;
+      height: 100% !important;
+      pointer-events: none;
+      border-bottom: 1px solid black;
+    }
+    .form__label:after {
+      content: "";
+      position: absolute;
+      left: 0px;
+      bottom: -1px;
+      height: 100%;
+      width: 100%;
+      border-bottom: 3px solid #ff0000;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease;
+    }
+    .label__content {
+      position: absolute;
+      bottom: 10px;
+      left: 0px;
+      transition: all 0.3s ease;
+    }
+    .form__input:focus+.form__label .label__content,
+    .form__input:valid+.form__label .label__content {
+      transform: translateY(-100%);
+      font-size: 16px;
+      color: #989898 !important;
+    }
+    .form__input:focus+.form__label:after,
+    .form__input:valid+.form__label:after {
+      transform: translateX(0%);
+    }
+    .btn {
+      background-color: #ff0000;
+      border: 2px solid white;
+      color: white;
+      padding: 8px !important;
+      border-radius: 5px;
+      font-size: 18px !important;
+    }
+    .btn:hover {
+      background-color: white;
+      border: 2px solid #ff0000;
+      color: #ff0000;
+    }
+    .btn_secondary {
+      background-color: white;
+      border: none;
+      color: #ff0000;
+      padding: 8px !important;
+      border-radius: 5px;
+      font-size: 18px !important;
+    }
+    .btn_secondary:hover {
+      background-color: white;
+      border: 2px solid #ff0000;
+      color: #ff0000;
+    }
  </style>
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14426/bannergenerator/2022_JH_Ausstellerbanner_Juni_160x600_GB.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14334/bannergenerator/040122_BOE22_Ausstellerbanner_160x600_EN.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -186,6 +186,6 @@
    <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
    </canvas>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/14426/bannergenerator/bannergeneratorEN.js">
+  <script src="https://viovendi.github.io/customizations/organization/14334/bannergenerator/bannergeneratorEN.js">
   </script>
  </div>
