--- a/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorDE.html
+++ b/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorDE.html
@@ -183,8 +183,10 @@
     </fieldset>
    </form>
    <br>
-   <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
+   <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto;">
    </canvas>
+   <div>
+   </div>
   </div>
   <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorDE.js">
   </script>
