--- a/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorEN.html
+++ b/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorEN.html
@@ -185,6 +185,7 @@
    <br>
    <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
    </canvas>
+   <div></div>
   </div>
   <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorEN.js">
   </script>
