--- a/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.html
+++ b/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.html
@@ -107,27 +107,27 @@
        <option value="" disabled="" selected="" hidden="">
        </option>
        <option value="vertikal">
-        120 x 600 (Vertical banner)
+        120 x 600 (Vertikaler Banner)
        </option>
        <option value="horizontal">
-        468 x 60 (Horizontal banner)
+        468 x 60 (Horizontaler Banner)
        </option>
        <option value="email">
-        180 x 60 (Email signature)
+        180 x 60 (Email-Signatur)
        </option>
        <option value="instagrampost">
-        1080 x 1080 (Instagram post)
+        1080 x 1080 (Instagram Post)
        </option>
        <option value="instagramstory">
         1080 x 1350 (Instagram Story)
        </option>
        <option value="facebook">
-        1080 x 1350 (Facebook post)
+        1080 x 1350 (Facebook Post)
        </option>
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
-        Format
+        Formato
        </span>
       </label>
      </div>
@@ -156,7 +156,7 @@
       </select>
       <label class="form__label">
        <span class="label__content">
-        Hall
+        Sala
        </span>
       </label>
      </div>
@@ -164,7 +164,7 @@
       <input id="stand_inp" type="text" class="form__input form-control" placeholder=" " required="required">
       <label class="form__label">
        <span class="label__content">
-        Stand
+        El sitio
        </span>
       </label>
      </div>
@@ -173,7 +173,7 @@
      <div class="submit__button">
       <a id="download" download="Banner.png">
        <button type="button" onclick="download()" class="btn">
-        Download
+        Descargar
        </button>
       </a>
      </div>
