--- a/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorES.html
+++ b/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorES.html
@@ -100,7 +100,7 @@
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/2022_IT_Banner_Aussteller_160x600_D.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/2022_IT_Banner_Aussteller_160x600_ES.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -127,7 +127,7 @@
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
-        Format
+        Formato
        </span>
       </label>
      </div>
@@ -156,7 +156,7 @@
       </select>
       <label class="form__label">
        <span class="label__content">
-        Halle
+        Sala
        </span>
       </label>
      </div>
@@ -164,7 +164,7 @@
       <input id="stand_inp" type="text" class="form__input form-control" placeholder=" " required="required">
       <label class="form__label">
        <span class="label__content">
-        Stand
+        El sitio
        </span>
       </label>
      </div>
@@ -173,7 +173,7 @@
      <div class="submit__button">
       <a id="download" download="Banner.png">
        <button type="button" onclick="download()" class="btn">
-        Download
+        Descargar
        </button>
       </a>
      </div>
@@ -183,11 +183,9 @@
     </fieldset>
    </form>
    <br>
-   <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto;">
+   <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
    </canvas>
-   <div>
-   </div>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorDE.js">
+  <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.js">
   </script>
  </div>
