--- a/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorDE.html
+++ b/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorDE.html
@@ -50,7 +50,7 @@
       bottom: -1px;
       height: 100%;
       width: 100%;
-      border-bottom: 3px solid #7b2927;
+      border-bottom: 3px solid #002873;
       transform: translateX(-100%);
       transition: transform 0.3s ease;
     }
@@ -71,7 +71,7 @@
       transform: translateX(0%);
     }
     .btn {
-      background-color: #7b2927;
+      background-color: #002873;
       border: 2px solid white;
       color: white;
       padding: 8px !important;
@@ -80,21 +80,21 @@
     }
     .btn:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #002873;
+      color: #002873;
     }
     .btn_secondary {
       background-color: white;
       border: none;
-      color: #7b2927;
+      color: #002873;
       padding: 8px !important;
       border-radius: 5px;
       font-size: 18px !important;
     }
     .btn_secondary:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #002873;
+      color: #002873;
     }
  </style>
  <div>
