--- a/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorEN.html
+++ b/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorEN.html
@@ -50,7 +50,7 @@
       bottom: -1px;
       height: 100%;
       width: 100%;
-      border-bottom: 3px solid #7b2927;
+      border-bottom: 3px solid #002873;
       transform: translateX(-100%);
       transition: transform 0.3s ease;
     }
@@ -71,7 +71,7 @@
       transform: translateX(0%);
     }
     .btn {
-      background-color: #7b2927;
+      background-color: #002873;
       border: 2px solid white;
       color: white;
       padding: 8px !important;
@@ -80,27 +80,27 @@
     }
     .btn:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #002873;
+      color: #002873;
     }
     .btn_secondary {
       background-color: white;
       border: none;
-      color: #7b2927;
+      color: #002873;
       padding: 8px !important;
       border-radius: 5px;
       font-size: 18px !important;
     }
     .btn_secondary:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #002873;
+      color: #002873;
     }
  </style>
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/2022_IT_Banner_Aussteller_160x600_GB.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intersupply/2022_IS_Banner_Aussteller_160x600_GB.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -187,6 +187,6 @@
    </canvas>
    <div></div>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorEN.js">
+  <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorEN.js">
   </script>
  </div>
