--- a/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.html
+++ b/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.html
@@ -107,13 +107,13 @@
        <option value="" disabled="" selected="" hidden="">
        </option>
        <option value="vertikal">
-        120 x 600 (Vertikaler Banner)
+        120 x 600 (Banner vertical)
        </option>
        <option value="horizontal">
-        468 x 60 (Horizontaler Banner)
+        468 x 60 (Banner horizontal)
        </option>
        <option value="email">
-        180 x 60 (Email-Signatur)
+        180 x 60 (Firma de correo electrónico)
        </option>
        <option value="instagrampost">
         1080 x 1080 (Instagram Post)
@@ -185,6 +185,8 @@
    <br>
    <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
    </canvas>
+   <div>
+   </div>
   </div>
   <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorES.js">
   </script>
