--- a/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorEN.html
+++ b/customizations/organization/14127/bannergenerator_intersupply/bannergeneratorEN.html
@@ -109,13 +109,13 @@
        <option value="vertikal">
         120 x 600 (Vertical banner)
        </option>
-       <option value="horizontal">
+ <!--      <option value="horizontal">
         468 x 60 (Horizontal banner)
-       </option>
+       </option>    -->
        <option value="email">
         180 x 60 (Email signature)
        </option>
-       <option value="instagrampost">
+<!--       <option value="instagrampost">
         1080 x 1080 (Instagram post)
        </option>
        <option value="instagramstory">
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook post)
-       </option>
+       </option>    -->
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
