--- a/customizations/organization/15342/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/15342/bannergenerator/bannergeneratorEN.html
@@ -50,7 +50,7 @@
       bottom: -1px;
       height: 100%;
       width: 100%;
-      border-bottom: 3px solid #7b2927;
+      border-bottom: 3px solid #e5007e;
       transform: translateX(-100%);
       transition: transform 0.3s ease;
     }
@@ -71,7 +71,7 @@
       transform: translateX(0%);
     }
     .btn {
-      background-color: #7b2927;
+      background-color: #e5007e;
       border: 2px solid white;
       color: white;
       padding: 8px !important;
@@ -80,21 +80,21 @@
     }
     .btn:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #e5007e;
+      color: #e5007e;
     }
     .btn_secondary {
       background-color: white;
       border: none;
-      color: #7b2927;
+      color: #e5007e;
       padding: 8px !important;
       border-radius: 5px;
       font-size: 18px !important;
     }
     .btn_secondary:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #e5007e;
+      color: #e5007e;
     }
  </style>
  <div>
@@ -109,7 +109,7 @@
        <option value="vertikal">
         120 x 600 (Vertical banner)
        </option>
-       <option value="horizontal">
+   <!--    <option value="horizontal">
         468 x 60 (Horizontal banner)
        </option>
        <option value="email">
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook post)
-       </option>
+       </option>    -->
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
