--- a/customizations/organization/15342/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15342/bannergenerator/bannergeneratorDE.html
@@ -50,7 +50,7 @@
       bottom: -1px;
       height: 100%;
       width: 100%;
-      border-bottom: 3px solid #7b2927;
+      border-bottom: 3px solid #e5007e;
       transform: translateX(-100%);
       transition: transform 0.3s ease;
     }
@@ -71,7 +71,7 @@
       transform: translateX(0%);
     }
     .btn {
-      background-color: #7b2927;
+      background-color: #e5007e;
       border: 2px solid white;
       color: white;
       padding: 8px !important;
@@ -80,27 +80,27 @@
     }
     .btn:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #e5007e;
+      color: #e5007e;
     }
     .btn_secondary {
       background-color: white;
       border: none;
-      color: #7b2927;
+      color: #e5007e;
       padding: 8px !important;
       border-radius: 5px;
       font-size: 18px !important;
     }
     .btn_secondary:hover {
       background-color: white;
-      border: 2px solid #7b2927;
-      color: #7b2927;
+      border: 2px solid #e5007e;
+      color: #e5007e;
     }
  </style>
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/2022_IT_Banner_Aussteller_160x600_D.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15342/bannergenerator/cakeandbake_2023_banner_aussteller_160x600_de.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -109,7 +109,7 @@
        <option value="vertikal">
         120 x 600 (Vertikaler Banner)
        </option>
-       <option value="horizontal">
+  <!--     <option value="horizontal">
         468 x 60 (Horizontaler Banner)
        </option>
        <option value="email">
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook Post)
-       </option>
+       </option>    -->
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
@@ -188,6 +188,6 @@
    <div>
    </div>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/14127/bannergenerator_intertabac/bannergeneratorDE.js">
+  <script src="https://viovendi.github.io/customizations/organization/15342/bannergenerator/bannergeneratorDE.js">
   </script>
  </div>
