--- a/customizations/organization/15342/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15342/bannergenerator/bannergeneratorDE.html
@@ -28,7 +28,7 @@
     .form__input {
       width: 100%;
       margin-top: 10px !important;
-      border: none;
+      border: none !important;
       outline: none;
     }
     input,select {
@@ -109,7 +109,7 @@
        <option value="vertikal">
         120 x 600 (Vertikaler Banner)
        </option>
-  <!--     <option value="horizontal">
+       <!--     <option value="horizontal">
         468 x 60 (Horizontaler Banner)
        </option>
        <option value="email">
