--- a/customizations/organization/15342/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/15342/bannergenerator/bannergeneratorEN.html
@@ -28,7 +28,7 @@
     .form__input {
       width: 100%;
       margin-top: 10px !important;
-      border: none;
+      border: none !important;
       outline: none;
     }
     input,select {
