--- a/customizations/organization/15267/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15267/bannergenerator/bannergeneratorDE.html
@@ -100,7 +100,7 @@
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15342/bannergenerator/cakeandbake_2023_banner_aussteller_160x600_de.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15267/bannergenerator/Ausstellerbanner_160x600_D.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -109,7 +109,7 @@
        <option value="vertikal">
         120 x 600 (Vertikaler Banner)
        </option>
-       <!--     <option value="horizontal">
+       <option value="horizontal">
         468 x 60 (Horizontaler Banner)
        </option>
        <option value="email">
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook Post)
-       </option>    -->
+       </option>
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
@@ -188,6 +188,6 @@
    <div>
    </div>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/15342/bannergenerator/bannergeneratorDE.js">
+  <script src="https://viovendi.github.io/customizations/organization/15267/bannergenerator/bannergeneratorDE.js">
   </script>
  </div>
