--- a/customizations/organization/15267/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15267/bannergenerator/bannergeneratorDE.html
@@ -50,7 +50,7 @@
       bottom: -1px;
       height: 100%;
       width: 100%;
-      border-bottom: 3px solid #e5007e;
+      border-bottom: 3px solid #80c342;
       transform: translateX(-100%);
       transition: transform 0.3s ease;
     }
@@ -71,7 +71,7 @@
       transform: translateX(0%);
     }
     .btn {
-      background-color: #e5007e;
+      background-color: #80c342;
       border: 2px solid white;
       color: white;
       padding: 8px !important;
@@ -80,21 +80,21 @@
     }
     .btn:hover {
       background-color: white;
-      border: 2px solid #e5007e;
-      color: #e5007e;
+      border: 2px solid #80c342;
+      color: #80c342;
     }
     .btn_secondary {
       background-color: white;
       border: none;
-      color: #e5007e;
+      color: #80c342;
       padding: 8px !important;
       border-radius: 5px;
       font-size: 18px !important;
     }
     .btn_secondary:hover {
       background-color: white;
-      border: 2px solid #e5007e;
-      color: #e5007e;
+      border: 2px solid #80c342;
+      color: #80c342;
     }
  </style>
  <div>
