--- a/customizations/organization/15267/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/15267/bannergenerator/bannergeneratorEN.html
@@ -50,7 +50,7 @@
       bottom: -1px;
       height: 100%;
       width: 100%;
-      border-bottom: 3px solid #e5007e;
+      border-bottom: 3px solid #80c342;
       transform: translateX(-100%);
       transition: transform 0.3s ease;
     }
@@ -71,7 +71,7 @@
       transform: translateX(0%);
     }
     .btn {
-      background-color: #e5007e;
+      background-color: #80c342;
       border: 2px solid white;
       color: white;
       padding: 8px !important;
@@ -80,27 +80,27 @@
     }
     .btn:hover {
       background-color: white;
-      border: 2px solid #e5007e;
-      color: #e5007e;
+      border: 2px solid #80c342;
+      color: #80c342;
     }
     .btn_secondary {
       background-color: white;
       border: none;
-      color: #e5007e;
+      color: #80c342;
       padding: 8px !important;
       border-radius: 5px;
       font-size: 18px !important;
     }
     .btn_secondary:hover {
       background-color: white;
-      border: 2px solid #e5007e;
-      color: #e5007e;
+      border: 2px solid #80c342;
+      color: #80c342;
     }
  </style>
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15342/bannergenerator/cakeandbake_2023_banner_aussteller_160x600_en.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15267/bannergenerator/Ausstellerbanner_160x600_E.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -109,7 +109,7 @@
        <option value="vertikal">
         120 x 600 (Vertical banner)
        </option>
-   <!--    <option value="horizontal">
+       <option value="horizontal">
         468 x 60 (Horizontal banner)
        </option>
        <option value="email">
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook post)
-       </option>    -->
+       </option>
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
@@ -187,6 +187,6 @@
    </canvas>
    <div></div>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/15342/bannergenerator/bannergeneratorEN.js">
+  <script src="https://viovendi.github.io/customizations/organization/15267/bannergenerator/bannergeneratorEN.js">
   </script>
  </div>
