--- a/customizations/organization/15396/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15396/bannergenerator/bannergeneratorDE.html
@@ -50,7 +50,7 @@
       bottom: -1px;
       height: 100%;
       width: 100%;
-      border-bottom: 3px solid #ff0000;
+      border-bottom: 3px solid #f7a600;
       transform: translateX(-100%);
       transition: transform 0.3s ease;
     }
@@ -71,7 +71,7 @@
       transform: translateX(0%);
     }
     .btn {
-      background-color: #ff0000;
+      background-color: #f7a600;
       border: 2px solid white;
       color: white;
       padding: 8px !important;
@@ -80,27 +80,27 @@
     }
     .btn:hover {
       background-color: white;
-      border: 2px solid #ff0000;
-      color: #ff0000;
+      border: 2px solid #f7a600;
+      color: #f7a600;
     }
     .btn_secondary {
       background-color: white;
       border: none;
-      color: #ff0000;
+      color: #f7a600;
       padding: 8px !important;
       border-radius: 5px;
       font-size: 18px !important;
     }
     .btn_secondary:hover {
       background-color: white;
-      border: 2px solid #ff0000;
-      color: #ff0000;
+      border: 2px solid #f7a600;
+      color: #f7a600;
     }
  </style>
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14334/bannergenerator/040122_BOE22_Ausstellerbanner_160x600_DE.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15396/bannergenerator/2023_ET_Webbanner_Aussteller_160x600_D.png">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -108,7 +108,7 @@
        </option>
        <option value="vertikal">
         120 x 600 (Vertikaler Banner)
-       </option>
+<!--       </option>
        <option value="horizontal">
         468 x 60 (Horizontaler Banner)
        </option>
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook Post)
-       </option>
+       </option> -->
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
@@ -186,6 +186,6 @@
    <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
    </canvas>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/14334/bannergenerator/bannergeneratorDE.js">
+  <script src="https://viovendi.github.io/customizations/organization/15396/bannergenerator/bannergeneratorDE.js">
   </script>
  </div>
