--- a/customizations/organization/15520/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15520/bannergenerator/bannergeneratorDE.html
@@ -1,4 +1,3 @@
-//bannergeneratorDE.html
 <style>
   .signup__form {
       display: flex;
@@ -101,7 +100,7 @@
  <div>
   <div class="signup__container signup__form">
    <form>
-    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/14334/bannergenerator/040122_BOE22_Ausstellerbanner_160x600_DE.png">
+    <img style="display: none" id="banner_img" crossorigin="anonymous" src="https://viovendi.github.io/customizations/organization/15520/bannergenerator/2022_FF_Bannergenerator_160x600.png'">
     <fieldset class="halle__stand">
      <div class="form-group">
       <select name="format" size="1" id="format_inp" class="form__input form-control" required="required">
@@ -136,8 +135,8 @@
       <select name="halle" id="halle_inp" class="form__input form-control" required="required">
        <option value="" disabled="" selected="" hidden="">
        </option>
-       <option value="3B">
-        3B
+       <option value="3">
+        3
        </option>
        <option value="4">
         4
@@ -187,6 +186,6 @@
    <canvas id="canvas" crossorigin="anonymous" style="display: block; margin: auto">
    </canvas>
   </div>
-  <script src="https://viovendi.github.io/customizations/organization/14334/bannergenerator/bannergeneratorDE.js">
+  <script src="https://viovendi.github.io/customizations/organization/15520/bannergenerator/bannergeneratorDE.js">
   </script>
  </div>
