--- a/customizations/organization/15383/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15383/bannergenerator/bannergeneratorDE.html
@@ -50,7 +50,7 @@
     bottom: -1px;
     height: 100%;
     width: 100%;
-    border-bottom: 3px solid #638832;
+    border-bottom: 3px solid #48a9c5;
     transform: translateX(-100%);
     transition: transform 0.3s ease;
   }
@@ -71,11 +71,14 @@
     transform: translateX(0%);
   }
   .btn {
-    background-color: white;
+    background-color: #48a9c5;
     border: 2px solid #48a9c5;
-    color: #48a9c5;
-    padding: 8px !important;
-    border-radius: 5px;
+    color: white;
+    padding-top: 18px !important;
+    padding-right: 36px !important;
+    padding-bottom: 18px !important;
+    padding-left: 36px !important;
+    border-radius: 50px;
     font-size: 18px !important;
   }
   .btn:hover {
@@ -84,17 +87,20 @@
     border-color: black;
   }
   .btn_secondary {
-    background-color: white;
-    border: none;
-    color: #48a9c5;
-    padding: 8px !important;
-    border-radius: 5px;
+    background-color: #48a9c5;
+    border: 2px solid #48a9c5;
+    color: white;
+    padding-top: 18px !important;
+    padding-right: 36px !important;
+    padding-bottom: 18px !important;
+    padding-left: 36px !important;
+    border-radius: 50px;
     font-size: 18px !important;
   }
   .btn_secondary:hover {
-    background-color: #48a9c5;
-    color: white;
-    border-color: #48a9c5;
+    background-color: white;
+    color: black;
+    border-color: black;
   }
  </style>
  <div>
