--- a/customizations/organization/15383/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/15383/bannergenerator/bannergeneratorEN.html
@@ -113,22 +113,22 @@
        <option value="" disabled="" selected="" hidden="">
        </option>
        <option value="vertikal">
-        120 x 600 (Vertikaler Banner)
+        120 x 600 (Vertical banner)
        </option>
        <option value="horizontal">
-        468 x 60 (Horizontaler Banner)
+        468 x 60 (Horizontal banner)
        </option>
        <option value="email">
-        180 x 60 (Email-Signatur)
+        180 x 60 (Email signature)
        </option>
        <option value="instagrampost">
-        1080 x 1080 (Instagram Post)
+        1080 x 1080 (Instagram post)
        </option>
        <option value="instagramstory">
-        1080 x 1350 (Instagram Story)
+        1080 x 1350 (Instagram story)
        </option>
        <option value="facebook">
-        1080 x 1350 (Facebook Post)
+        1080 x 1350 (Facebook post)
        </option>
       </select>
       <label class="form__label form__label__select">
