--- a/customizations/organization/15383/bannergenerator/bannergeneratorEN.html
+++ b/customizations/organization/15383/bannergenerator/bannergeneratorEN.html
@@ -162,7 +162,7 @@
       </select>
       <label class="form__label">
        <span class="label__content">
-        Halle
+        Hall
        </span>
       </label>
      </div>
