--- a/customizations/organization/15396/bannergenerator/bannergeneratorDE.html
+++ b/customizations/organization/15396/bannergenerator/bannergeneratorDE.html
@@ -108,7 +108,7 @@
        </option>
        <option value="vertikal">
         120 x 600 (Vertikaler Banner)
-<!--       </option>
+       </option>
        <option value="horizontal">
         468 x 60 (Horizontaler Banner)
        </option>
@@ -123,7 +123,7 @@
        </option>
        <option value="facebook">
         1080 x 1350 (Facebook Post)
-       </option> -->
+       </option>
       </select>
       <label class="form__label form__label__select">
        <span class="label__content">
